--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -38,8 +38,6 @@ layout: default
   </div>
 </section>
 <!-- /about -->
-
-{% include work-process-section.html %}
-
-{% include team-section.html %}
+<!-- {% include work-process-section.html %} -->
+<!-- {% include team-section.html %} -->
 
