--- a/_includes/experience-section.html
+++ b/_includes/experience-section.html
@@ -1,23 +1,17 @@
-{% if site.data.settings.experience %}
+<!-- {% if site.data.settings.experience %} -->
 <!-- experience -->
 <section class="section">
   <div class="container">
     <div class="row justify-content-around">
       <div class="col-lg-12 text-center">
-        <h2 class="section-title">{{ site.data.settings.experience-title }}</h2>
+        <h3 class="section-title">Teaching</h3>
       </div>
-      {% for experience in site.data.settings.experience %}
-      <div class="col-lg-3 col-md-4 text-center">
-        <!--<img src="{{ site.baseurl }}/assets/images/experience/{{ experience.icon }}" alt="{{ site.data.settings.experience-title }} icon"> -->
-        <h4>{{ experience.desc }}</h4>
-        <h4>{{ experience.name }}</h4>
-        <p class="mb-0">{{ experience.level }}</p>
-        <p class="mb-0">{{ experience.date }}</p>
-        <h6 class="text-light">{{ experience.organization }}</h6>
-      </div>
-      {% endfor %}
-    </div>
+        <p>I have been a Teaching Assistant for courses at School of Transnational Governance, European University
+        Institute, and Ashoka University. The courses have been at Graduate and Undergraduate Levels.
+      I recently assisted Prof Daniela Iorio for the course of Economics for Policy-Microeconomic tools and Methods.
+      More details are available under the teaching tab. </p>
+  </div>
   </div>
 </section>
 <!-- ./experience -->
-{% endif %}
+<!-- {% endif %} -->
