--- a/_includes/work-process-section.html
+++ b/_includes/work-process-section.html
@@ -14,7 +14,7 @@
       <p> The project analyses firm responses when workers are uninformed about their productivity.
         Firms face a heterogeneous work force with a measure of uninformed workers who demand wages that are not
         linked to the current productivity. The model is discplined through application to Shimer-Puzzle. <br>
-      You can find more about my research here.
+      You can find more about my research <a href="/portfolio.html"> here </a>.
     </p>
       </div>
       <!-- {% endfor %} -->
