--- a/_includes/experience-section.html
+++ b/_includes/experience-section.html
@@ -9,7 +9,7 @@
         <p>I have been a Teaching Assistant for courses at School of Transnational Governance, European University
         Institute, and Ashoka University. The courses have been at Graduate and Undergraduate Levels.
       I recently assisted Prof Daniela Iorio for the course of Economics for Policy-Microeconomic tools and Methods.
-      More details are available under the teaching tab. </p>
+      More details are available under the  <a href="/teaching.html">teaching tab</a>. </p>
   </div>
   </div>
 </section>
