--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -5,20 +5,26 @@
       <div class="col-lg-11 mx-auto">
         <h3 class="text-white font-tertiary">{{ site.data.settings.hero.hero-title }}</h3>
         <h3 class="text-white font-tertiary">{{ site.data.settings.hero.hero-desc }}</h3>
+        <!-- </div> -->
+        <!-- <div class="col-md-4 text-center drag-lg-top">
+          <div class="shadow-down mb-3">
+          <img src="assets/images/about/me.jpg" alt="Pranav Mimani" class="img-fluid w-100 rounded-lg border-thick border-white">
+          </div>
+        </div> -->
       </div>
     </div>
   </div>
   <!-- <div class="layer-bg w-100"> -->
     <!-- <img class="img-fluid w-100" src="{{ site.baseurl }}/assets/images/illustrations/leaf-bg.png" alt="bg-shape"> -->
   <!-- </div> -->
-  <div class="layer" id="l2">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/dots-cyan.png" alt="bg-shape">
-  </div>
   <!-- <div class="layer" id="l3">
     <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-orange.png" alt="bg-shape">
   </div>
   <div class="layer" id="l4">
     <img src="{{ site.baseurl }}/assets/images/illustrations/dots-orange.png" alt="bg-shape">
+  </div> -->
+  <!-- <div class="layer" id="l10">
+    <img src="assets/images/about/me.jpg" alt="bg-shape" class="img-fluid w-100 rounded-lg border-thick border-white">
   </div> -->
   <div class="layer" id="l5">
     <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-yellow.png" alt="bg-shape">
